# dijkstra

./: CMakeLists.txt
src/: wgraph.c  wgraph.h
test/: wgraph_test.cc
